cmake_minimum_required(VERSION 3.26)
project(Software_Programs)

set(CMAKE_CXX_STANDARD 14)

add_executable(Software_Programs
        .idea/.gitignore
        .idea/modules.xml
        .idea/Software-Programs.iml
        .idea/vcs.xml
        "Leetcode two sum number.c"
        README.md
        "improve program to show the all possible values of target.c"
        "Improve the program to show the all possible values of target.c")
