cmake_minimum_required(VERSION 3.26)
project(Software_Programs)

set(CMAKE_CXX_STANDARD 14)

add_executable(Software_Programs
        .idea/.gitignore
        .idea/modules.xml
        .idea/Software-Programs.iml
        .idea/vcs.xml
        "Leetcode two sum number.c"
        README.md
        "improve program to show the all possible values of target.c"
        "Improve the program to show the all possible values of target.c"
        palindrome.c
        "002 Program to Convert Roman number to integer number .c"
        "003 Program to check palindrome number.c"
        "002-(a) improve version program.cpp"
        "004 Add two numbers Leetcode.c"
        "005 Binary watch of C program.c")
